# Azure-OpenAI-Client

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
dragons/: azure_openai_client.py
dragons/templates/: index.html
